--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,2 +1,48 @@
-<h1>Home Page</h1>
+    <h1>Contacts</h1>
+ 
+    <button id="getContacts">List all Contacts</button>
+    <button id="addContact">Create New Contact</button>
+    <button id="showContact">Search in Contacts</button>
+  <!--   <button id="searchContacts">Search for a Contact</button>
+    <button id="updateContact">Update a Contact</button>
+    <button id="destroyContact">Destroy a Contact</button> -->
+
+  <div id="results">
+  <table id="contacts">
+    <thead>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Email</th>
+      </tr>
+    </thead>
+    <tbody>
+    </tbody>
+  </table>
+</div>
+ 
+<div id="contactForm">
+  <fieldset>
+    <legend>Add New Contact</legend>
+    <form id="newContact">
+      <input type="text" id="firstname" placeholder="First Name"><br>
+      <input type="text" id="lastname" placeholder="Last Name"><br>
+      <input type="text" id="email" placeholder="Email"><br>
+      <br>
+      <input type="submit" value="Create Contact">
+    </form>
+  </fieldset>
+</div>
+
+<div id="showForm">
+  <fieldset>
+  <legend>Search</legend>
+    <form id="findContact">
+      <input type="text" id="searchterm" placeholder="Find ID"><br>
+      <input type="button" id="findContactButton" value="Search Contacts">
+    </form>
+  </fieldset>
+</div>
+
+
 
