--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -12,12 +12,14 @@
   -->
   <link rel="stylesheet" href="/stylesheets/application.css">
 
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+ <script src="javascript/jquery-2.2.0.js"></script>
   <script src="/javascript/application.js"></script>
+  
 
   <title></title>
 </head>
 <body>
   <%= yield %>
+
 </body>
 </html>
